@@ -27,7 +27,6 @@ package hudson.triggers;
 
 import static java.util.logging.Level.WARNING;
 
-import antlr.ANTLRException;
 import edu.umd.cs.findbugs.annotations.CheckForNull;
 import edu.umd.cs.findbugs.annotations.NonNull;
 import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
@@ -82,7 +81,6 @@ import jenkins.triggers.SCMTriggerItem;
 import jenkins.util.SystemProperties;
 import net.sf.json.JSONObject;
 import org.apache.commons.jelly.XMLOutput;
-import org.apache.commons.lang.StringUtils;
 import org.jenkinsci.Symbol;
 import org.kohsuke.accmod.Restricted;
 import org.kohsuke.accmod.restrictions.DoNotUse;
@@ -110,7 +108,7 @@ public class SCMTrigger extends Trigger<Item> {
     private boolean ignorePostCommitHooks;
 
     @DataBoundConstructor
-    public SCMTrigger(String scmpoll_spec) throws ANTLRException {
+    public SCMTrigger(String scmpoll_spec) {
         super(scmpoll_spec);
     }
 
@@ -125,7 +123,7 @@ public class SCMTrigger extends Trigger<Item> {
      * @deprecated since 2.21
      */
     @Deprecated
-    public SCMTrigger(String scmpoll_spec, boolean ignorePostCommitHooks) throws ANTLRException {
+    public SCMTrigger(String scmpoll_spec, boolean ignorePostCommitHooks) {
         super(scmpoll_spec);
         this.ignorePostCommitHooks = ignorePostCommitHooks;
     }
@@ -382,7 +380,7 @@ public class SCMTrigger extends Trigger<Item> {
         public FormValidation doCheckScmpoll_spec(@QueryParameter String value,
                                                   @QueryParameter boolean ignorePostCommitHooks,
                                                   @AncestorInPath Item item) {
-            if (StringUtils.isBlank(value)) {
+            if (value == null || value.isBlank()) {
                 if (ignorePostCommitHooks) {
                     return FormValidation.ok(Messages.SCMTrigger_no_schedules_no_hooks());
                 } else {
