@@ -29,16 +29,15 @@ import static org.junit.Assert.assertNotEquals;
 import static org.junit.Assert.assertNotNull;
 import static org.junit.Assume.assumeTrue;
 
-import com.gargoylesoftware.htmlunit.Page;
-import com.gargoylesoftware.htmlunit.WebRequest;
 import hudson.Functions;
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
+import org.htmlunit.Page;
+import org.htmlunit.WebRequest;
 import org.junit.Rule;
 import org.junit.Test;
 import org.jvnet.hudson.test.Issue;
 import org.jvnet.hudson.test.JenkinsRule;
-import org.jvnet.hudson.test.recipes.WithPlugin;
 
 @Issue("SECURITY-914")
 public class Security914Test {
@@ -47,16 +46,15 @@ public class Security914Test {
     public JenkinsRule j = new JenkinsRule();
 
     @Test
-    @WithPlugin("credentials.hpi")
     public void cannotUseInvalidLocale_toTraverseFolder() throws Exception {
         assumeTrue(Functions.isWindows());
 
         assertNotNull(j.getPluginManager().getPlugin("credentials"));
-        j.createWebClient().goTo("plugin/credentials/images/24x24/credentials.png", "image/png");
+        j.createWebClient().goTo("plugin/credentials/images/credentials.svg", "image/svg+xml");
 
         JenkinsRule.WebClient wc = j.createWebClient()
                 .withThrowExceptionOnFailingStatusCode(false);
-        WebRequest request = new WebRequest(new URL(j.getURL() + "plugin/credentials/.xml"));
+        WebRequest request = new WebRequest(new URI(j.getURL() + "plugin/credentials/.xml").toURL());
         // plugin deployed in: test\target\jenkins7375296945862059919tmp
         // rootDir is in     : test\target\jenkinsTests.tmp\jenkins1274934531848159942test
         // j.jenkins.getRootDir().getName() = jenkins1274934531848159942test
@@ -68,16 +66,15 @@ public class Security914Test {
     }
 
     @Test
-    @WithPlugin("credentials.hpi")
     public void cannotUseInvalidLocale_toAnyFileInSystem() throws Exception {
         assumeTrue(Functions.isWindows());
 
         assertNotNull(j.getPluginManager().getPlugin("credentials"));
-        j.createWebClient().goTo("plugin/credentials/images/24x24/credentials.png", "image/png");
+        j.createWebClient().goTo("plugin/credentials/images/credentials.svg", "image/svg+xml");
 
         JenkinsRule.WebClient wc = j.createWebClient()
                 .withThrowExceptionOnFailingStatusCode(false);
-        WebRequest request = new WebRequest(new URL(j.getURL() + "plugin/credentials/.ini"));
+        WebRequest request = new WebRequest(new URI(j.getURL() + "plugin/credentials/.ini").toURL());
         // ../ can be multiply to infinity, no impact, we just need to have enough to reach the root
         request.setAdditionalHeader("Accept-Language", "../../../../../../../../../../../../windows/win");
 
